crypto/s2n_certificate.h

/**
 * This struct is used to enforce security policy certificate preferences. An
 * `s2n_cert_description` is constructed from an openssl `X509*` using
 * `s2n_cert_get_cert_description`. This happens both when loading certificates
 * and when validating certificates received from a peer.
*/
struct s2n_cert_description {
    int signature_nid;
    /* This field is not populated for RSA_PSS signatures */
    int signature_digest_nid;
    bool self_signed;
};
struct s2n_cert {
    s2n_pkey_type pkey_type;
    uint16_t ec_curve_nid;
    s2n_cert_public_key public_key;
    struct s2n_cert_description description;
    struct s2n_blob raw;
    struct s2n_cert *next;
};
struct s2n_cert_chain {
    uint32_t chain_size;
    struct s2n_cert *head;
};
struct s2n_cert_chain_and_key {
    struct s2n_cert_chain *cert_chain;
    s2n_cert_private_key *private_key;
    struct s2n_blob ocsp_status;
    struct s2n_blob sct_list;
    /* DNS type SubjectAlternative names from the leaf certificate to match
     * with the server_name extension. We ignore non-DNS SANs here since the
     * server_name extension only supports DNS.
     */
    struct s2n_array *san_names;
    /* CommonName values from the leaf certificate's Subject to match with the
     * server_name extension. Decoded as UTF8.
     */
    struct s2n_array *cn_names;
    /* Application defined data related to this cert. */
    void *context;
};